--- a/sep_main.html
+++ b/sep_main.html
@@ -24,6 +24,20 @@
                     </div>
                 </div>
             </div>
+            <button class="hamburger-menu" aria-label="Toggle navigation">&#9776;</button>
+        </div>
+        <div class="mobile-menu">
+            <a href="https://github.com/SpaceExpansionProject" target="_blank" data-i18n="github">Github</a>
+            <a href="#features" data-i18n="features">Features</a>
+            <a href="#news" data-i18n="news">News</a>
+            <div class="language-switcher">
+                <button data-i18n="lang">Lang</button>
+                <div class="language-dropdown">
+                    <button id="lang-mob-en">EN</button>
+                    <button id="lang-mob-uk">UA</button>
+                    <button id="lang-mob-ru">RU</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="hero-section" id="hero">
